<resources>
    <string name="app_name">Movie Vaganza</string>
    <string name="movies">Movies</string>
    <string name="tv_show">Tv Show</string>
    <string name="share">Share</string>
    <string name="text_share">Film : %1$s, \n\nOverview : \n%2$s</string>


    <string name="title">Title</string>S
    <string name="overview">Overview</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imagepreview">imagePreview</string>
    <string name="release_date">Release Date</string>
    <string name="data_tidak_tersedia">Data Tidak Tersedia</string>
    <string name="gambar_poster">gambar poster</string>
    <string name="gambar_profil">gambar profil</string>
    <string name="message_ok">OK</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="favorite">Favorite</string>
    <string name="favorited">favorited</string>
    <string name="list_item_gambar">list item gambar</string>
</resources>